--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>第一test</title>
+    <title>第1個</title>
 </head>
 <body>
     <h1>我的第一個網頁</h1>
+    <h2>我的第二個</h2>
 </body>
 </html>
